--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Roboto Condensed;
+  /* background-color: black; */
   /* background-color: rgb(52, 54, 70); */
   /* background-color: rgb(36, 36, 36); */
 }
