--- a/front-end/components/About/style.css
+++ b/front-end/components/About/style.css
@@ -1,34 +1,66 @@
 .about {
   height: 100vh;
-  align-items: start;
-  justify-content: center;
+  padding: 80px 15px 15px 15px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  padding: 15px;
-  background-color: rgb(29, 29, 29);
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  position: relative;
+  padding-bottom: 140px;
+  /* padding: 15px; */
+  background-color: rgb(0, 0, 0);
 }
-.about h2 {
-  color: rgb(255, 228, 91);
+.about h1 {
+  /* position: absolute; */
+  /* text-align: center; */
+  /* top: 0px; */
+  color: rgb(119, 119, 218);
 }
 .about p {
-  color: white;
+  background-image: linear-gradient(
+    to top,
+    rgba(253, 58, 123, 0.367),
+    rgba(119, 119, 218, 0.31)
+  );
+  /* background-color: rgb(119, 119, 218); */
+  box-shadow: -3px 3px 2px rgb(253, 58, 123);
+  border: 1px solid rgb(253, 58, 123);
+  color: rgb(255, 255, 255);
   line-height: 1.5;
+  padding: 20px 10px;
+  border-radius: 20px;
   /* list-style-type: lower-alpha; */
   /* list-style: low; */
   /* width: ; */
-  font-style: italic;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  /* font-style: italic; */
+}
+.about span {
+  color: white;
+  font-weight: bold;
+  padding: 5px 15px;
+  border-radius: 20px;
+  background-color: rgb(119, 119, 218);
+  /* box-shadow: -3px 3px 2px rgb(253, 58, 123); */
 }
 
 @media screen and (min-width: 800px) {
   .about {
-    width: 800px;
+    width: 100%;
     line-height: 2.5;
+    align-items: center;
+    /* background-color: aliceblue; */
     /* gap: 2px; */
     /* line-gap-override: 4; */
     /* lin */
   }
   .about h2 {
     font-size: 40px;
+  }
+  .about p {
+    /* margin: auto; */
+    width: 60%;
+    line-height: 2;
   }
 }
