--- a/front-end/components/Education/style.css
+++ b/front-end/components/Education/style.css
@@ -7,30 +7,62 @@
   gap: 20px;
   /* margin: auto; */
   width: 100%;
-  scale: 0.8;
-  opacity: 0;
-  background-color: rgb(29, 29, 29);
+  color: white;
+  background-color: rgb(0, 0, 0);
   /* background-color: aqua; */
 }
 .visible {
+  position: relative;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 30px;
   gap: 20px;
   /* margin: auto; */
   width: 100%;
-  scale: 1;
-  opacity: 1;
-  transition: 1s;
-  background-color: rgb(29, 29, 29);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(0, 0, 0);
+  /* background-image: linear-gradient(to top, black, rgb(110, 119, 218)); */
   color: white;
+}
+.education h1 {
+  position: sticky;
+  left: 15px;
+  color: rgba(119, 119, 218, 0.688);
+}
+.visible h1 {
+  /* position: absolute; */
+  left: 15px;
+  top: 80px;
+  color: rgb(119, 119, 218);
 }
 .exp h2 {
   font-size: 20px;
 }
+.education .exp {
+  scale: 0.8;
+  opacity: 0;
+}
+.visible .exp {
+  width: 90%;
+  scale: 1;
+  opacity: 1;
+  transition: 1s;
+}
+/* .exp .shadow {
+  position: absolute;
+  top: -70px;
+  left: 50px;
+  border-radius: 50%;
+  width: 350px;
+  height: 70px;
+  background-color: aliceblue;
+  box-shadow: 0px 30px 70px rgb(110, 119, 218);
+} */
 .exp {
+  position: relative;
   padding: 10px 10px;
   border-radius: 20px;
   /* height: 100px; */
@@ -38,31 +70,46 @@
   flex-direction: column;
   align-items: start;
   gap: 6px;
+  overflow: hidden;
+  background-image: linear-gradient(
+    to top,
+    rgba(253, 58, 123, 0.367),
+    rgba(119, 119, 218, 0.31)
+  );
+  /* background-color: rgb(119, 119, 218); */
+  box-shadow: -3px 3px 2px rgb(253, 58, 123);
+  border: 1px solid rgb(253, 58, 123);
   /* padding-left: 10px; */
   /* background-color: aqua; */
-  background-color: rgba(255, 255, 255, 0.26);
-  border: 2px solid rgb(255, 221, 52);
-  box-shadow: 2px 2px 10px rgb(5, 5, 5);
+  /* background-color: rgb(253, 58, 123); */
+  /* background-color: rgba(119, 119, 218, 0.142); */
+  /* box-shadow: inset 3px 3px 45px rgba(119, 119, 218, 0.63);
+  border: 2px solid rgb(253, 58, 123); */
+  /* background-color: rgba(110, 119, 218, 0.403); */
+  /* background-image: linear-gradient(
+    to top,
+
+    rgba(119, 119, 218, 0.329),
+    rgba(119, 119, 218, 0.926)
+  ); */
+  /* border: 2px solid rgb(255, 221, 52); */
+  /* box-shadow: 2px 2px 10px rgb(5, 5, 5); */
   /* background-color: rgb(195, 195, 195); */
-  width: 90%;
+  /* width: 90%; */
   /* scale: 0.5; */
 }
 
-@media screen and (min-width: 500px) {
-  .education span,
-  .visible span {
-    display: flex;
-    /* background-color: antiquewhite; */
+@media screen and (min-width: 700px) {
+  .visible .exp {
+    width: 60%;
+    height: 100px;
+    gap: 20px;
+    padding: 20px 20px;
+  }
+
+  .visible .exp span {
     width: 100%;
-    flex-wrap: wrap;
+    display: flex;
     justify-content: space-between;
-  }
-}
-@media screen and (min-width: 800px) {
-  .education {
-    width: 800px;
-  }
-  .visible {
-    width: 800px;
   }
 }
