--- a/front-end/components/Project/style.css
+++ b/front-end/components/Project/style.css
@@ -1,20 +1,41 @@
+.project-main {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+}
+.project-main h1 {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  top: 80px;
+  color: rgb(119, 119, 218);
+  padding: 0px 20px;
+}
 .project {
   /* background-color: rgb(195, 251, 195); */
   width: 100%;
-  height: 100vh;
-  background-color: rgb(29, 29, 29);
+  height: 60vh;
+  /* background-color: rgb(0, 0, 0); */
   display: flex;
+  position: relative;
+  top: 80px;
   /* flex-wrap: wrap; */
   overflow-x: scroll;
   align-items: center;
   /* justify-content: center; */
-  gap: 15px;
-  padding-top: 140px;
+  gap: 20px;
+  /* padding-top: 140px; */
   padding-bottom: 120px;
   /* background-color: aqua; */
   padding: 20px;
   /* scroll-behavior: smooth; */
   scroll-snap-type: x mandatory;
+}
+.project h1 {
+  position: absolute;
+  color: rgb(119, 119, 218);
+  top: 100px;
 }
 .project::-webkit-scrollbar {
   height: 0px;
@@ -32,29 +53,69 @@
   border-radius: 20px;
   font-size: 12px;
   padding-top: 15px;
-  padding-bottom: 10px;
-  box-shadow: 2px 2px 10px rgb(0, 0, 0);
+  padding-bottom: 30px;
+  /* box-shadow: -2px 10px 20px rgba(119, 119, 218, 0.414); */
   flex-shrink: 0;
   flex-grow: 0;
   flex-basis: auto;
   scroll-snap-align: center;
-  background-color: rgba(255, 255, 255, 0.26);
-  border: 2px solid rgb(255, 217, 0);
+  /* background-color: rgb(253, 58, 123); */
+  background-color: rgb(0, 0, 0);
+  background-image: linear-gradient(
+    to top,
+    rgba(253, 58, 123, 0.367),
+    rgba(119, 119, 218, 0.31)
+  );
+  /* background-color: rgb(119, 119, 218); */
+  box-shadow: inset 3px -3px 10px rgba(253, 58, 123, 0.667),
+    inset -3px 3px 10px rgba(143, 143, 253, 0.549);
+  /* border: 2px solid rgb(255, 217, 0); */
 }
 .project h2 {
-  width: 25rch;
+  /* width: 25rch; */
   /* flex-shrink: 0; */
   padding: 5px 10px;
   font-weight: bold;
   font-size: 20px;
-  background-color: rgb(255, 227, 113);
-  color: rgb(22, 22, 22);
+  /* background-color: rgb(255, 227, 113); */
+  color: rgb(255, 255, 255);
   border-radius: 20px;
 }
 .project img {
   width: 25vh;
 
   border-radius: 14px;
+}
+
+#mongo {
+  color: rgb(21, 140, 21);
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: -3px 3px 3px rgb(138, 14, 74);
+}
+#expres {
+  color: rgb(144, 144, 144);
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: -3px 3px 3px rgb(138, 14, 74);
+}
+#react {
+  color: skyblue;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: -3px 3px 3px rgb(138, 14, 74);
+}
+#node {
+  color: greenyellow;
+  font-family: "Times New Roman", Times, serif;
+  text-shadow: -3px 3px 3px rgb(138, 14, 74);
+}
+.project .logo {
+  width: 25vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  font-size: 25px;
+
+  /* background-color: aliceblue; */
 }
 .project.s2-img-2 {
   width: 100px;
@@ -69,48 +130,69 @@
 .project .project-head p {
   display: none;
 }
-@media screen and (max-width: 350px) {
-  /* .project img {
-    width: 18vh;
 
- 
-  } */
-}
-
-@media screen and (min-width: 800px) {
-  .project section {
-    width: 49%;
-    height: 33vh;
-    /* flex-shrink: auto; */
-  }
-
-  .project img {
-    width: 20vh;
+@media screen and (min-width: 700px) {
+  .project h1 {
+    top: 30px;
   }
   .project {
     flex-wrap: wrap;
+    height: 70vh;
+    top: 90px;
+    /* background-color: aliceblue; */
   }
-}
-
-@media screen and (min-width: 1270px) {
+  .project-main {
+    /* top: 40px; */
+    /* background-color: aliceblue; */
+  }
   .project p {
     display: flex;
+    color: white;
   }
+  .project-main h1 {
+    position: absolute;
+    color: rgb(119, 119, 218);
+    top: 50px;
+    /* left: 700px; */
+    /* background-color: aliceblue; */
+  }
+
   .project section {
-    width: 24%;
-    height: 60vh;
+    /* text-align: center; */
+    /* display: flex; */
+    width: 30%;
+    height: 30vh;
     flex-shrink: 1;
+    /* box-shadow: inset 5px 5px 10px rgb(161, 156, 246),
+      inset -5px -5px 10px rgb(9, 9, 14); */
   }
   .project img {
-    width: 30vh;
+    width: 15vh;
   }
   .project .project-head p {
-    display: flex;
+    /* display: flex; */
     padding: 20px 20px;
     font-size: 14px;
   }
 
   .project h2 {
     font-weight: bold;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .project {
+    /* background-color: aliceblue; */
+    justify-content: center;
+  }
+  .project section {
+    height: 60vh;
+    width: 23%;
+  }
+  .project .project-head p {
+    display: flex;
+  }
+  .project img {
+    width: 25vh;
   }
 }
