--- a/front-end/router/Home/style.css
+++ b/front-end/router/Home/style.css
@@ -5,11 +5,12 @@
   scroll-behavior: smooth;
 }
 section {
+  background-color: rgb(143, 192, 235);
   width: 100%;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
   scroll-snap-align: start;
 }
 
@@ -29,8 +30,8 @@ section {
   border-radius: 50%;
 
   transition: 1s ease-in;
-  background-color: #ffd56b;
-  color: rgb(0, 0, 0);
+  background-color: rgb(119, 119, 218);
+  color: rgb(255, 255, 255);
   transform: scale(1.1);
 }
 
@@ -38,8 +39,8 @@ section {
   font-size: 25px;
   padding: 9px 10px 7px 11px;
   border-radius: 50%;
-  transition: 1s ease-in-out;
-  background-color: rgb(29, 29, 29);
+  transition: 1s ease-in;
+  background-color: rgb(36, 36, 36);
   color: rgb(255, 255, 255);
 }
 .box {
@@ -51,6 +52,7 @@ section {
   width: 0;
   transition: 0.2s ease-in;
 }
+
 .menu-bar-social {
   opacity: 1;
   overflow: hidden;
@@ -58,90 +60,40 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(255, 255, 255);
+  background-image: linear-gradient(
+    to top,
+    rgba(253, 58, 123, 0.367),
+    rgba(119, 119, 218, 0.31)
+  );
+  /* background-color: rgb(119, 119, 218); */
+  box-shadow: inset 3px -3px 2px rgb(253, 58, 123);
+  border: 1px solid rgb(253, 58, 123);
+  color: white;
   padding: 5px 10px;
   border-radius: 10px;
-  box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.31);
+  box-shadow: 1px 2px 15px rgba(52, 30, 30, 0.31);
   font-size: 25px;
   transition: 0.6s ease-in-out;
 }
-.contact-bar a {
-  /* background-color: rgb(228, 228, 228); */
 
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* place-content: center; */
-  /* text-align: center; */
-  /* background-color: rgb(255, 255, 255); */
-  /* padding: 10px; */
-  /* border: 2px solid rgb(131, 131, 131); */
-  border-radius: 50%;
-  /* transition: 0.5s; */
-}
-.contact-bar a:hover {
-  background-color: #ffe991;
-  /* scale: 1.1; */
-  /* color: white; */
-}
-
-.contact-bar i {
-  color: rgb(0, 0, 0);
-}
-
-.contact-bar a:active {
-  background-color: rgb(255, 255, 255);
-}
-
-.contact-bar {
-  position: absolute;
-  margin: auto;
-  width: 90%;
-  /* width: 100%; */
-  top: 30px;
-  /* height: 100px; */
-  display: flex;
-  align-items: end;
-  justify-content: space-between;
-  font-size: 20px;
-  padding: 5px 20px;
-
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%);
-
-  /* box-shadow: inset 5px 5px 10px 10px rgb(167, 167, 167),
-    inset -5px -5px 10px 10px rgb(255, 255, 255); */
-  /* box-shadow: 0px 5px 13px rgb(231, 231, 231); */
-  /* border-bottom-right-radius: 20px; */
-  /* border-bottom-left-radius: 20px; */
-  border-radius: 30px;
-  background-color: rgb(255, 222, 103);
-  /* color: white; */
-}
-
-@media screen and (min-width: 800px) {
-  section {
-    /* background-color: aqua; */
-  }
-  .contact-bar {
-    width: 600px;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -10%);
-    /* height: 100px; */
-  }
-  .contact-bar i {
-    font-size: 25px;
-  }
-  .menu-bar {
-    gap: 2%;
-  }
+@media screen and (min-width: 700px) {
   .menu-bar-social {
-    width: 20%;
-    padding: 10px;
-    justify-content: space-around;
+    width: 400px;
+
+    justify-content: center;
+    gap: 40px;
+    font-size: 30px;
+    /* background-color: rgb(253, 58, 123); */
+    color: rgb(255, 255, 255);
+  }
+  .box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    width: 200px;
+    opacity: 0;
+    width: 0;
+    transition: 0.2s ease-in;
   }
 }
