--- a/front-end/components/Message/style.css
+++ b/front-end/components/Message/style.css
@@ -1,7 +1,7 @@
 .message {
   width: 100%;
   height: 100vh;
-  background-color: rgb(29, 29, 29);
+  background-color: rgb(0, 0, 0);
   /* margin: auto; */
   /* text-align: center; */
   display: flex;
@@ -9,7 +9,14 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+  position: relative;
   /* background-color: antiquewhite; */
+}
+.message h1 {
+  position: absolute;
+  text-align: center;
+  top: 80px;
+  color: rgb(119, 119, 218);
 }
 .message span {
   width: 0px;
@@ -49,10 +56,25 @@
   gap: 15px;
   font-weight: 500;
   font-size: 20px;
-  background-color: rgb(44, 44, 44);
+  /* background-color: rgb(119, 119, 218); */
+  background-color: rgb(0, 0, 0);
+  background-image: linear-gradient(
+    to top,
+    rgba(253, 58, 123, 0.367),
+    rgba(119, 119, 218, 0.31)
+  );
+  /* background-color: rgb(119, 119, 218); */
+  /* box-shadow: -3px 3px 0px rgb(253, 58, 123); */
+  border: 1px solid rgb(253, 58, 123);
   color: white;
 }
 
 .message .butt:active {
   background-color: gray;
+}
+
+@media screen and (min-width: 700px) {
+  .message h1 {
+    /* left: 700px; */
+  }
 }
